# soroban-guard-contracts

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
docs/: vulnerabilities.md
registry/: Cargo.toml
registry/src/: lib.rs
secure/dust_griefing/: Cargo.toml
secure/dust_griefing/src/: lib.rs
secure/dust_griefing/test_snapshots/tests/: test_dust_deposit_rejected.1.json
secure/protected_admin/src/: lib.rs
secure/protected_fee_withdraw/: Cargo.toml
secure/protected_fee_withdraw/src/: lib.rs
secure/secure_burn/: Cargo.toml
secure/secure_burn/src/: lib.rs
secure/secure_escrow/src/: lib.rs
secure/secure_multisig/: Cargo.toml
secure/secure_pausable/: Cargo.toml
secure/secure_token/: Cargo.toml
secure/secure_token/src/: lib.rs
secure/secure_transfer/: Cargo.toml
secure/secure_transfer/src/: lib.rs
secure/secure_transfer/test_snapshots/tests/: test_balance_defaults_to_zero.1.json  test_normal_transfer.1.json  test_self_transfer_rejected.1.json
secure/secure_vault/: Cargo.toml
secure/secure_vault/src/: lib.rs
secure/sequence_lock/src/: lib.rs
vulnerable/admin_rugpull/: Cargo.toml
vulnerable/admin_rugpull/src/: lib.rs  secure.rs
vulnerable/admin_rugpull/test_snapshots/tests/: test_admin_drains_user_without_user_auth.1.json  test_secure_rejects_admin_only_drain.1.json  test_user_cannot_prevent_admin_drain.1.json
vulnerable/allowance_not_decremented/: Cargo.toml  PR_DESCRIPTION.md
vulnerable/allowance_not_decremented/src/: lib.rs  secure.rs  tests.rs
vulnerable/call_depth/: Cargo.toml
vulnerable/call_depth/src/: lib.rs
vulnerable/div_by_zero/: Cargo.toml
vulnerable/div_by_zero/src/: lib.rs
vulnerable/double_claim/: Cargo.toml
vulnerable/double_claim/src/: lib.rs
vulnerable/dust_griefing/: Cargo.toml
vulnerable/dust_griefing/src/: lib.rs  secure.rs
vulnerable/flash_loan_no_check/: Cargo.toml  PR_DESCRIPTION.md
vulnerable/flash_loan_no_check/src/: lib.rs  secure.rs  tests.rs
vulnerable/instant_oracle/: Cargo.toml
vulnerable/instant_oracle/src/: lib.rs  secure.rs
vulnerable/key_collision/: Cargo.toml
vulnerable/key_collision/src/: lib.rs  secure.rs
vulnerable/leaky_events/: Cargo.toml  PR_DESCRIPTION.md
vulnerable/leaky_events/src/: lib.rs  secure.rs
vulnerable/missing_auth/src/: lib.rs
vulnerable/missing_events/src/: lib.rs
vulnerable/missing_ttl/: Cargo.toml
vulnerable/missing_ttl/src/: lib.rs  secure.rs
vulnerable/near_overflow_input/src/: lib.rs
vulnerable/negative_transfer/: Cargo.toml
vulnerable/negative_transfer/src/: lib.rs  secure.rs
vulnerable/no_slippage/: Cargo.toml  PR_DESCRIPTION.md
vulnerable/no_slippage/src/: lib.rs  secure.rs
vulnerable/reentrancy/: Cargo.toml
vulnerable/reentrancy/src/: lib.rs  secure.rs
vulnerable/reinit_attack/: Cargo.toml
vulnerable/reinit_attack/src/: lib.rs
vulnerable/replay_attack/: Cargo.toml
vulnerable/replay_attack/src/: lib.rs  secure.rs
vulnerable/scanner_impersonation/: Cargo.toml
vulnerable/scanner_impersonation/src/: lib.rs  secure.rs
vulnerable/self_transfer/: Cargo.toml
vulnerable/self_transfer/src/: lib.rs
vulnerable/sensitive_storage/: Cargo.toml
vulnerable/sensitive_storage/src/: lib.rs
vulnerable/stale_oracle/: Cargo.toml
vulnerable/stale_oracle/src/: lib.rs  oracle.rs  secure.rs
vulnerable/string_admin/: Cargo.toml
vulnerable/string_admin/src/: lib.rs  secure.rs
vulnerable/timestamp_lock/src/: lib.rs
vulnerable/unbounded_storage/: Cargo.toml
vulnerable/unbounded_storage/src/: lib.rs
vulnerable/uncapped_rate/: Cargo.toml
vulnerable/uncapped_rate/src/: lib.rs  secure.rs
vulnerable/unchecked_math/src/: lib.rs
vulnerable/underflow_transfer/src/: lib.rs
vulnerable/unprotected_admin/: Cargo.toml
vulnerable/unprotected_admin/src/: lib.rs
vulnerable/unprotected_burn/: Cargo.toml
vulnerable/unprotected_burn/src/: lib.rs
vulnerable/unprotected_delete/: Cargo.toml
vulnerable/unprotected_delete/src/: lib.rs
vulnerable/unprotected_emergency_withdraw/: Cargo.toml
vulnerable/unprotected_emergency_withdraw/src/: lib.rs  secure.rs
vulnerable/unprotected_fee_withdraw/: Cargo.toml
vulnerable/unprotected_fee_withdraw/src/: lib.rs
vulnerable/unprotected_mint/: Cargo.toml
vulnerable/unprotected_mint/src/: lib.rs
vulnerable/unsafe_cast/: Cargo.toml
vulnerable/unsafe_cast/src/: lib.rs
vulnerable/unsafe_storage/src/: lib.rs
vulnerable/zero_admin/: Cargo.toml
vulnerable/zero_admin/src/: lib.rs
vulnerable/zero_deposit/: Cargo.toml
vulnerable/zero_deposit/src/: lib.rs  secure.rs
vulnerable/zero_stake/: Cargo.toml
vulnerable/zero_stake/src/: lib.rs  secure.rs
(+52 files in other folders)
