[workspace]
resolver = "2"
members = [
    "vulnerable/admin_rugpull",
    "vulnerable/missing_auth",
    "vulnerable/missing_events",
    "vulnerable/missing_ttl",
    "vulnerable/timestamp_lock",
    "vulnerable/unchecked_math",
    "vulnerable/unprotected_admin",
    "vulnerable/unsafe_storage",
    "vulnerable/reentrancy",
    "vulnerable/negative_transfer",
    "vulnerable/string_admin",
    "vulnerable/div_by_zero",
    "secure/secure_vault",
    "secure/protected_admin",
    "secure/secure_transfer",
    "registry",
]

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
