[workspace]
resolver = "2"
members = [
    "vulnerable/admin_rugpull",
    "vulnerable/scanner_impersonation",
    "vulnerable/missing_auth",
    "vulnerable/unprotected_mint",
    "vulnerable/zero_admin",
    "vulnerable/missing_events",
    "vulnerable/missing_ttl",
    "vulnerable/timestamp_lock",
    "vulnerable/unchecked_math",
    "vulnerable/instant_oracle",
    "vulnerable/stale_oracle",
    "vulnerable/unprotected_admin",
    "vulnerable/unprotected_emergency_withdraw",
    "vulnerable/unsafe_storage",
    "vulnerable/unbounded_storage",
    "vulnerable/zero_deposit",
    "vulnerable/reentrancy",
    "vulnerable/replay_attack",
    "vulnerable/dust_griefing",
    "vulnerable/negative_transfer",
    "vulnerable/string_admin",
    "vulnerable/div_by_zero",
    "vulnerable/flash_loan_no_check",
    "vulnerable/allowance_not_decremented",
    "vulnerable/leaky_events",
    "vulnerable/no_slippage",
    "vulnerable/unsafe_cast",
    "vulnerable/self_transfer",
    "vulnerable/double_claim",
    "vulnerable/underflow_transfer",
    "vulnerable/unprotected_delete",
    "vulnerable/reinit_attack",
    "vulnerable/unprotected_burn",
    "vulnerable/unprotected_fee_withdraw",
    "vulnerable/zero_stake",
    "secure/secure_vault",
    "secure/protected_admin",
    "secure/secure_transfer",
    "secure/secure_burn",
    "secure/secure_token",
    "secure/sequence_lock",
    "secure/dust_griefing",
    "secure/protected_fee_withdraw",
    "registry",
]

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
