[workspace]
resolver = "2"
members = [
    "vulnerable/admin_rugpull",
    "vulnerable/allowance_not_decremented",
    "vulnerable/call_depth",
    "vulnerable/div_by_zero",
    "vulnerable/double_claim",
    "vulnerable/dust_griefing",
    "vulnerable/flash_loan_no_check",
    "vulnerable/instant_oracle",
    "vulnerable/key_collision",
    "vulnerable/leaky_events",
    "vulnerable/missing_auth",
    "vulnerable/unprotected_mint",
    "vulnerable/zero_admin",
    "vulnerable/missing_events",
    "vulnerable/missing_ttl",
    "vulnerable/negative_transfer",
    "vulnerable/no_slippage",
    "vulnerable/reentrancy",
    "vulnerable/reinit_attack",
    "vulnerable/scanner_impersonation",
    "vulnerable/self_transfer",
    "vulnerable/sensitive_storage",
    "vulnerable/string_admin",
    "vulnerable/timestamp_lock",
    "vulnerable/unchecked_math",
    "vulnerable/uncapped_rate",
    "vulnerable/instant_oracle",
    "vulnerable/stale_oracle",
    "vulnerable/unprotected_admin",
    "vulnerable/unprotected_burn",
    "vulnerable/unprotected_delete",
    "vulnerable/unprotected_emergency_withdraw",
    "vulnerable/unprotected_fee_withdraw",
    "vulnerable/unsafe_storage",
    "vulnerable/unbounded_storage",
    "vulnerable/zero_deposit",
    "vulnerable/reentrancy",
    "vulnerable/replay_attack",
    "vulnerable/dust_griefing",
    "vulnerable/negative_transfer",
    "vulnerable/string_admin",
    "vulnerable/div_by_zero",
    "vulnerable/flash_loan_no_check",
    "vulnerable/allowance_not_decremented",
    "vulnerable/leaky_events",
    "vulnerable/no_slippage",
    "vulnerable/unsafe_cast",
    "secure/secure_vault",
    "secure/protected_oracle",
    "secure/protected_admin",
    "secure/protected_fee_withdraw",
    "secure/secure_burn",
    "secure/secure_token",
    "registry",
]

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
